<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mayu.demo.MainActivity"
    android:background="@color/layoutcol">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_msg"
        android:id="@+id/tx1"
        android:textSize="35sp"
        android:background="@color/text1"
        android:paddingLeft="20sp"/>

     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tx1"
         android:text="@string/b1"
         android:id="@+id/bn1"
         android:onClick="inc"
         android:layout_marginTop="20sp"
         android:textSize="30sp"
         android:background="@color/colorAccent"
         android:layout_marginStart="150dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val"
        android:layout_below="@id/bn1"
        android:id="@+id/tx2"
        android:layout_marginStart="200dp"
        android:textSize="70sp"
        android:layout_marginTop="30sp"
        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/productname"
         android:textSize="40sp"
         android:id="@+id/quantity"
         android:layout_below="@id/tx1"
         android:layout_marginTop="120sp"
         android:layout_marginStart="5sp"
         android:textColor="@color/colorPrimaryDark"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx2"
        android:text="@string/b2"
        android:onClick="dec"
        android:id="@+id/bn2"
        android:layout_marginTop="30sp"
        android:textSize="30sp"
        android:background="@color/colorAccent"
        android:layout_marginStart="150dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b3"
        android:layout_below="@id/bn2"
        android:layout_centerInParent="true"
        android:layout_marginTop="150sp"
        android:textSize="20sp"
        android:onClick="jmpnxt"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bn3"
         android:layout_below="@id/bn2"
         android:layout_marginTop="20dp"
         android:textSize="30sp"
         android:id="@+id/bn3"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:layout_below="@id/bn2"
         android:text="@string/p"
         android:layout_marginStart="200sp"
         android:layout_marginTop="25dp"
         android:id="@+id/txtp"

         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:layout_below="@id/bn3"
        android:onClick="send1"
        />
</RelativeLayout>
